# class

1A/complex_network/: pyproject.toml  requirements.txt  work_1.ipynb  work_2.ipynb  work_4.ipynb  work_5.ipynb
1A/complex_network/data/: work_1.csv  work_2_baseball.csv
1S/mathModeling/1/: main.py
1S/mathModeling/2/: main.py
1S/simulation/: Dockerfile  README.md  docker-compose.yml
1S/simulation/src/: agent.py  bar.py  const.py  main.py  setting.py  simulator.py  strategy.py  util.py  visualize.py
1S/stat1/: a.r  main.r  test.r
1S/stat_ml/: main.ipynb
